<resources>
    <string name="home">Home</string>
    <string name="nav_home">Home</string>
    <string name="nav_discover">Discover</string>
    <string name="nav_more">More</string>
    <string name="onboarding_title">Choose protection method</string>
    <string name="onboarding_vpn_title">VPN Mode</string>
    <string name="onboarding_vpn_desc">Works on all devices. No root required.</string>
    <string name="onboarding_root_title">Root Mode</string>
    <string name="onboarding_root_desc">Fastest blocking. Requires root access.</string>
    <string name="onboarding_start_button">START PROTECTING</string>
    <string name="more_section_tools">Tools</string>
    <string name="more_section_settings">Settings</string>
    <string name="more_dns_log">DNS Log</string>
    <string name="more_custom_rules">Custom Rules</string>
    <string name="more_filter_sources">Filter Sources</string>
    <string name="more_adware_scanner">Adware Scanner</string>
    <string name="more_preferences">Preferences</string>
    <string name="more_backup">Backup &amp; Restore</string>
    <string name="more_about">About</string>
    <string name="more_github">GitHub / Help</string>
    <string name="more_domain_checker">Domain Checker</string>
    <string name="more_domain_checker_desc">Test if a site is blocked — unblock instantly</string>
    <string name="domain_checker_subtitle">Check if AdsAway blocks a site, then allow or block it instantly</string>
    <string name="domain_checker_allow_button">Add to Allow List</string>
    <string name="domain_checker_remove_allow_button">Remove Allow Rule</string>
    <string name="domain_checker_block_button">Block it</string>
    <string name="domain_checker_already_allowed">You already have an allow rule for this domain</string>
    <string name="domain_checker_not_blocked">This domain is not in any blocked list</string>
    <string name="domain_checker_delete_rule">Delete Rule</string>
    <string name="domain_checker_rule_deleted">Rule deleted</string>
    <string name="domain_checker_allow_removed">Allow rule removed</string>
    <string name="domain_checker_allowed_snack">Added %1$s to allow list</string>
    <string name="domain_checker_blocked_snack">Blocked %1$s</string>
    <string name="discover_tab_curated">Curated</string>
    <string name="discover_tab_filterlists">FilterLists.com</string>
    <string name="home_no_sources_hint">No filter sources. Tap Discover to add some.</string>
    <string name="home_discover_cta">Browse Filter Lists</string>
    <string name="credit_line_home">Crafted with love by Steve Solun · Forked from AdAway</string>
    <string name="about_credits">Crafted with love by Steve Solun</string>
    <string name="about_attribution">Forked from AdAway · Open source, GPL-3.0</string>
    <string name="button_exit">Exit</string>
    <string name="button_close">Close</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_add">Add</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_help">Help</string>
    <string name="phase_check">Check</string>
    <string name="phase_download">Download</string>
    <string name="phase_parse">Parse</string>
    <string name="pause_update">Pause update</string>
    <string name="resume_update">Resume update</string>
    <string name="stop_update">Stop update</string>
    <string name="progress_complete">%d%% Complete</string>
    <string name="header_help">Welcome!</string>
    <string name="text_help">AdsAway is a free and open-source software design to block advertising. It fetches advertising network addresses to block them on your device.\nWant to know more? Check the help below!</string>
    <string name="button_show_help">Show more help</string>
    <string name="icon_update_status">Update status</string>
    <string name="text_update">All hosts files from the defined sources are downloaded, merged with your own lists and installed as one hosts file on your system.</string>
    <string name="button_enable_hosts">Enable ad-blocking</string>
    <string name="button_disable_hosts">Disable ad-blocking</string>
    <string name="header_webserver">Web server</string>
    <string name="webserver_status_running">Running</string>
    <string name="webserver_status_stopped">Stopped</string>
    <string name="webserver_toggle_text">Start or stop webserver on localhost to answer requests to blocked hostnames.</string>
    <string name="button_enable_webserver">Enable web server</string>
    <string name="button_disable_webserver">Disable web server</string>
    <string name="header_vpn">VPN</string>
    <string name="vpn_status_running">Running</string>
    <string name="vpn_status_stopped">Stopped</string>
    <string name="vpn_toggle_text">Start or stop VPN to filter requests.</string>
    <string name="button_enable_vpn">Enable VPN</string>
    <string name="button_disable_vpn">Disable VPN</string>
    <string name="checkbox_list_context_title">Edit Entry</string>
    <string name="checkbox_list_context_apply">Apply</string>
    <string name="checkbox_list_context_edit">Edit</string>
    <string name="checkbox_list_context_delete">Delete</string>
    <string name="menu_check_updates">Check updates</string>
    <string name="menu_update_all">Update all</string>
    <string name="menu_save_filter_set">Save filter set</string>
    <string name="menu_apply_filter_set">Apply filter set</string>
    <string name="menu_schedule_filter_set">Schedule filter set updates</string>
    <string name="filter_set_name_hint">Set name</string>
    <string name="filter_set_saved">Filter set saved</string>
    <string name="filter_set_applied">Filter set applied</string>
    <string name="filter_set_none">No saved filter sets</string>
    <string name="filter_set_schedule_off">Off</string>
    <string name="filter_set_schedule_daily">Daily</string>
    <string name="filter_set_schedule_weekly">Weekly</string>
    <string name="filter_set_schedule_pick_time">Pick time</string>
    <string name="filter_set_schedule_pick_day">Pick day</string>
    <string name="filter_set_schedule_current_selection">Current selection</string>
    <string name="menu_manage_schedules">Manage schedules</string>
    <string name="schedule_global_title">Global updates</string>
    <string name="schedule_global_desc">Automatically update all enabled sources</string>
    <string name="schedule_edit">Edit schedule</string>
    <string name="schedule_off">Off</string>
    <string name="schedule_daily_at">Daily at %1$s</string>
    <string name="schedule_weekly_at">Weekly on %1$s at %2$s</string>
    <string name="import_dialog">Importing…</string>
    <string name="import_success">Backup successfully imported from your external storage.</string>
    <string name="import_failed">Failed to import backup. Is its format correct? Check logcat for more details.</string>
    <string name="export_dialog">Exporting…</string>
    <string name="export_success">Backup successfully exported to file \'%s\' on your external storage.</string>
    <string name="export_failed">Failed to export backup file \'%s\'.</string>
    <string name="hosts_header">The hosts file</string>
    <string name="hosts_description">The hosts file is a system file that maps hostnames to IP addresses. It is a plain text file which configuration is handled by AdsAway. Here are its few first lines:</string>
    <string name="hosts_content">Loading the hosts file content…</string>
    <string name="hosts_open_button">Open the hosts file</string>
    <string name="status_check">Checking for update</string>
    <string name="status_check_source">Checking %s source for update</string>
    <string name="status_retrieve">Retrieving sources</string>
    <string name="status_download_source">Downloading source %s</string>
    <string name="status_read_source">Reading source %s</string>
    <string name="status_parse_source">Parsing %s source</string>
    <string name="status_sync_database">Syncing rule database</string>
    <string name="status_revert">Reverting to default hosts file</string>
    <string name="status_revert_done">Default hosts file restored</string>
    <string name="status_reverting_subtitle">Creating standard hosts file</string>
    <string name="status_update_available">Source update available</string>
    <string name="status_update_available_subtitle">Newer hosts files available</string>
    <string name="status_no_update_found">No source update found</string>
    <string name="status_no_connection">No Internet connection</string>
    <string name="status_no_connection_subtitle">No Internet connection available</string>
    <string name="status_download_fail">Unavailable sources</string>
    <string name="status_download_fail_subtitle_new">No hosts sources are reachable!</string>
    <string name="status_root_access_denied">Root access denied</string>
    <string name="status_root_access_denied_subtitle">Allow root access from your root app</string>
    <string name="status_failure">Something went wrong</string>
    <string name="status_failure_subtitle">Check the logcat for more details</string>
    <string name="status_enabled">Enabled</string>
    <string name="status_enabled_subtitle">Newest hosts files enabled</string>
    <string name="status_disabled">Disabled</string>
    <string name="status_disabled_subtitle">Default hosts file installed</string>
    <string name="status_apply_sources">Apply latest sources</string>
    <string name="status_create_new_hosts">Creating a new hosts file</string>
    <string name="status_copy_new_hosts">Copying a new hosts file</string>
    <string name="status_check_copy">Checking hosts file copy</string>
    <string name="status_hosts_updated">Hosts file successfully updated</string>
    <string name="status_vpn_configuration_updated">VPN configuration successfully updated</string>
    <string name="notification_configuration_changed">Your configuration changed. You need to apply it.</string>
    <string name="notification_configuration_changed_action">Apply</string>
    <string name="notification_configuration_installing">Applying new configuration…</string>
    <string name="notification_configuration_failed">Failed to apply new configuration.</string>
    <string name="apply_symlink_missing_status">The symlink to the hosts file target is missing</string>
    <string name="apply_symlink_missing">Symlink from your target to /system/etc/hosts is not existing or incorrect! AdsAway will not work if it is not pointing to the right file.\n\nDo you want to try creating a symlink?</string>
    <string name="apply_symlink_missing_title">Symlink missing</string>
    <string name="apply_not_enough_space">Not enough space on the partition!\nTry changing the target hosts file in preferences to /data/data/hosts.</string>
    <string name="apply_not_enough_space_title">Not enough space</string>
    <string name="apply_private_file_fail">Downloaded file could not be read.</string>
    <string name="apply_private_file_fail_title">Private file fail</string>
    <string name="apply_remount_fail">Remounting the partition as read/write failed!</string>
    <string name="apply_remount_fail_title">Remount failed</string>
    <string name="apply_copy_fail_status">Failed to copy hosts file</string>
    <string name="apply_copy_fail">Copying of hosts file failed!</string>
    <string name="apply_copy_fail_title">Copy failed</string>
    <string name="apply_success_subtitle">Applied hosts sources</string>
    <string name="apply_success_title">Applying successful</string>
    <string name="apply_success_dialog">Applying was successful.\nIt may be necessary to reboot Android for the changes to take effect.\n\nDo you want to reboot?\n(To prevent data loss make sure no app uses the SD card at the moment!)</string>
</resources>